--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Run file_manager tests
         run: RUSTFLAGS="-A warnings" cargo test file_manager::tests
+
+      - name: Run buffer_manager_v2 tests
+        run: RUSTFLAGS="-A warnings" cargo test buffer_manager_v2::tests
