feat: log_managerののtest ci追加

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,3 +21,6 @@ jobs:
 
       - name: Run buffer_manager_v2 tests
         run: RUSTFLAGS="-A warnings" cargo test buffer_manager_v2::tests
+
+      - name: Run log_manager_v2 tests
+        run: RUSTFLAGS="-A warnings" cargo test log_manager_v2::tests
