feat: transaction_v2のテスト追加

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,6 @@ jobs:
 
       - name: Run log_manager_v2 tests
         run: RUSTFLAGS="-A warnings" cargo test log_manager_v2::tests
+
+      - name: Run transaction_v2 tests
+        run: RUSTFLAGS="-A warnings" cargo test transaction_v2::tests
