--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Run record_page_v2 tests
         run: RUSTFLAGS="-A warnings" cargo test record_page_v2::tests
+
+      - name: Run table_scan_v2 tests
+        run: RUSTFLAGS="-A warnings" cargo test table_scan_v2::tests
